# what2watch

./: .gitignore
what2watch-api/: .env.example  .gitignore  Readme.md  pyproject.toml
what2watch-api/app/: dependencies.py  main.py
what2watch-api/app/core/: config.py  lifetime.py
what2watch-api/app/recommender/: detailed.py  plot.py  simple.py
what2watch-api/app/routers/: __init__.py  chat.py  health.py  recommender_chat.py  recommender_ranking.py  recommender_request.py
what2watch-api/app/schemas/: recommendations.py
what2watch-api/app/utils/: input.py
what2watch-gui/: .env.example  index.html  package-lock.json  package.json
what2watch-gui/src/: App.vue  api-routes.js  routes.js  style.css
what2watch-gui/src/components/: DetailedChat.vue  HelloWorld.vue  MovieChat.vue  MovieRanking.vue  PlotChat.vue
what2watch-gui/src/schemas/: recommendations.ts
