[tool.poetry]
name = "what2watch"
version = "0.1"
description = ""
authors = ["Weronika Żelazko <art.zelazko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
